[project]
name = "concept-graphrag"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    # "mteb>=1.39.7",
    "notebook>=7.4.7",
    "torch>=2.9.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
